syntax = "proto3";

import "commonmodels/error/error.proto";
import "commonmodels/chat/chat.proto";

package rys.ajaxpetproject.request.update.create.proto;

option java_multiple_files = true;

message ChatUpdateRequest {
  string requestId = 1;

  commonmodels.chat.proto.Chat chat = 2;
}

message ChatUpdateResponse {
  oneof response {
    Success success = 1;

    Failure failure = 2;
  }

  message Success {
    commonmodels.chat.proto.Chat result = 1;
  }

  message Failure {
    string message = 1;

    oneof error {
      commonmodels.error.proto.Error internal_error = 2;

      commonmodels.error.proto.Error not_found = 3;
    }
  }
}
